# graphix-mqtbench

./: .gitignore  pyproject.toml
.benchmarks/Darwin-CPython-3.13-64bit/: 0001_d6e147847098c0dd56be62f9100adf0994448249_20260227_135734_uncommited-changes.json  0001_unknown_20260226_153603.json  0002_d6e147847098c0dd56be62f9100adf0994448249_20260227_135757_uncommited-changes.json  0003_d6e147847098c0dd56be62f9100adf0994448249_20260227_140156_uncommited-changes.json  0004_d6e147847098c0dd56be62f9100adf0994448249_20260227_140849_uncommited-changes.json  0005_d6e147847098c0dd56be62f9100adf0994448249_20260227_141002_uncommited-changes.json  data.json  data_0.json
benchs/: bench_simulators.py
examples/: benchmark_example.ipynb
src/graphix_mqtbench/: __init__.py  _generated_benchmarks_enum.py  benchmark.py  characterize.py  converter.py  generate_benchmarks_enum.py
tests/: test_benchmark.py
